Versucht PG-Datenbank Verbindung herzustellen. Mit Docker Image gestartet und pg-client vert.x versucht. Leider nicht zu Ende gebracht.

--- a/quarkus/src/main/resources/application.properties
+++ b/quarkus/src/main/resources/application.properties
@@ -4,3 +4,8 @@ quarkus.smallrye-openapi.path=/swagger
 #mp.openapi.extensions.smallrye.operationIdStrategy=METHOD
 
 quarkus.openapi-generator.codegen.input-base-dir=src/main/openapi/
+
+quarkus.datasource.db-kind=postgresql 
+quarkus.datasource.username=user
+quarkus.datasource.password=password
+quarkus.datasource.jdbc.url=postgresql://localhost:5432/my_db
