--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -67,6 +67,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-reactive-pg-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-pg-client</artifactId>
+      <version>4.4.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
