Verbindung von Quarkus zur postgres-DB im Docker Container richtig aufgebaut.

--- a/quarkus/src/main/resources/application.properties
+++ b/quarkus/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-quarkus.smallrye-openapi.path=/swagger
+#quarkus.smallrye-openapi.path=/swagger
 
 #mp.openapi.scan.disable=true
 #mp.openapi.extensions.smallrye.operationIdStrategy=METHOD
 
-quarkus.openapi-generator.codegen.input-base-dir=src/main/openapi/
+#quarkus.openapi-generator.codegen.input-base-dir=src/main/openapi/
 
-quarkus.datasource.db-kind=postgresql 
+quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=user
 quarkus.datasource.password=password
-quarkus.datasource.jdbc.url=postgresql://localhost:5432/my_db
+quarkus.datasource.reactive.url=postgresql://localhost:5432/my_db
 
 
 quarkus.http.cors=true
